--- a/frontend/up2u-react/src/style/Login.css
+++ b/frontend/up2u-react/src/style/Login.css
@@ -1,14 +1,29 @@
-
 .login-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 80vh; 
-  
-    .login-form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      width: 300px;
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 80vh;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px; 
+  align-items: center;
+  width: 300px;
+}
+
+.login-form button {
+  padding: 12px;
+  border: none;
+  border-radius: 20px;
+  background-color: #ffb627;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.login-form button:hover {
+  background-color: #e2a11b;
+}
